--- a/node/node-deployment.yml
+++ b/node/node-deployment.yml
@@ -1,33 +1,30 @@
-# K8 works with API versions to declare the resources
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: node-deployment # Naming the deployment
-
-
+  name: node
 spec:
   selector:
     matchLabels:
-      app: node-deployment # Look for this label to match with K8 service
-    
-  # Let's create 2 replica sets of thsi instances/pods
-  replicas: 2
-
-  # Template to use its label for K8 service to launch in the 
-  template:
+      app: node
+  replicas: 3
+  template: 
     metadata:
       labels:
-        app: monotiller/eng89_node_app
-
-    # Let's define the container spec
+        app: node
     spec:
       containers:
-      - name: monotiller/eng89_node_app
-        image: monotiller/eng89_node_app
-        ports:
-        - containerPort: 3000
-        env:
-          - name: DB_HOST
-            value: mongodb://mongo:27017/posts
-        imagePullPolicy: Always
+        - name: node
+          image: monotiller/eng89_node_app
+          ports:
+            - containerPort: 3000
+          env:
+            - name: DB_HOST
+              value: mongodb://mongo:27017/posts
+          command: ["/bin/sh","-c"]
+          args: ["node","seeds/seed.js"]
+          imagePullPolicy: Always
+
+# Scale our app
+# hpa to auto scale our development on deployment
+# In the config we need to declare min and max deployment
+# Create a file called node-hpa.yml
