--- a/node/node-service.yml
+++ b/node/node-service.yml
@@ -1,19 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: node-deployment
-  namespace: default
+  name: node
 spec:
-  ports:
-  - nodePort: 30442
-    port: 80
-    protocol: TCP
-    targetPort: 3000
   selector:
-    app: node-deployment
-  sessionAffinity: None
-  type: LoadBalancer
-status:
-  loadBalancer:
-    ingress:
-    - hostname: localhost
+    app: node
+  ports:
+    - port: 3000
+      targetPort: 3000
+  type: LoadBalancer 
