Uncommented a couple of lines

--- a/node/node-deployment.yml
+++ b/node/node-deployment.yml
@@ -20,8 +20,8 @@ spec:
           env:
             - name: DB_HOST
               value: mongodb://mongo:27017/posts
-          # command: [""]
-          # args: ["node","seeds/seed.js"]
+          command: [""]
+          args: ["node","seeds/seed.js"]
           imagePullPolicy: Always
 
 # Scale our app
